--- a/Product Review and rating form/css/style.css
+++ b/Product Review and rating form/css/style.css
@@ -15,7 +15,7 @@
 }
 
 body{
-    background-image: url('../media/bg.jpg');
+    background-image: url('../images/bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
