--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,21 @@ input[type="submit"]:hover{
     background-color: #dc35dc;
     color: #fff;
 }
+.popup{
+    position:fixed;
+    top:20px;
+    right: 20px;
+    padding: 4px 20px;
+    border-radius: 6px;
+    font-size: 14px;
+    display: none;
+    z-index: 9999;
+}
+.popup-success{
+    background:#28a745;
+    color:#fff
+}
+
 @media (max-width:992px){
     .page-layout{
         flex-direction: column;
